--- a/Asklepios/Asklepios.Application/Asklepios.Application.csproj
+++ b/Asklepios/Asklepios.Application/Asklepios.Application.csproj
@@ -15,4 +15,8 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
