--- a/Asklepios/Asklepios.Application/Asklepios.Application.csproj
+++ b/Asklepios/Asklepios.Application/Asklepios.Application.csproj
@@ -8,15 +8,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Asklepios.Core\Asklepios.Core.csproj" />
+      <ProjectReference Include="..\Asklepios.Infrastructure\Asklepios.Infrastructure.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Services\" />
     </ItemGroup>
 
 </Project>
