--- a/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
+++ b/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
@@ -13,5 +13,9 @@
     <ItemGroup>
         <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\Asklepios.Core\Asklepios.Core.csproj" />
+    </ItemGroup>
 
 </Project>
