--- a/Asklepios/Asklepios.Api/Asklepios.Api.csproj
+++ b/Asklepios/Asklepios.Api/Asklepios.Api.csproj
@@ -11,4 +11,11 @@
       <ProjectReference Include="..\Asklepios.Infrastructure\Asklepios.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
