--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,13 @@ name: .NET CI
 
 on:
   push:
-    branches: main
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: main
-
+    branches:
+      - main
+      - develop
 jobs:
   build:
 
