--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  "auth": {
+    "issuer": "asklepios-issuer",
+    "audience": "asklepios-audience",
+    "signingKey": "VhagJ82N5Yz8jhC8nU88tUuwxE35GtXNgVFY4aae",
+    "expiry": "00.01:00:00"
+  },
   "postgres": {
     "connectionString": "Host=localhost;Database=asklepios;Username=postgres;Password="
   }
