--- a/Asklepios/Asklepios.Application/Asklepios.Application.csproj
+++ b/Asklepios/Asklepios.Application/Asklepios.Application.csproj
@@ -16,4 +16,8 @@
       <PackageReference Include="Scrutor" Version="4.2.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\Users\" />
+    </ItemGroup>
+
 </Project>
