--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,6 @@ jobs:
       
     - name: Build the project
       run: dotnet build Asklepios.sln
+
+    - name: Run tests
+      run: dotnet test Asklepios.sln
