--- a/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
+++ b/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
@@ -28,6 +28,7 @@
     
     <ItemGroup>
       <ProjectReference Include="..\Asklepios.Application\Asklepios.Application.csproj" />
+      <ProjectReference Include="..\Asklepios.Core\Asklepios.Core.csproj" />
     </ItemGroup>
 
 </Project>
