Transfer SendGrid key to Azure Key Vault

--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -15,7 +15,7 @@
   "postgres": {
     "connectionString": "Host=localhost;Database=asklepios;Username=postgres;Password="
   },
-  "sendgrid": {
-    "keySensGrid": "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"
+  "KeyVault": {
+    "VaultUri": "https://asklepios.vault.azure.net/"
   }
 }
