--- a/Asklepios/Asklepios.Api/Asklepios.Api.csproj
+++ b/Asklepios/Asklepios.Api/Asklepios.Api.csproj
@@ -12,6 +12,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.1" />
+      <PackageReference Include="Azure.Identity" Version="1.12.0-beta.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
