Created first event

--- a/Asklepios/Asklepios.Application/Asklepios.Application.csproj
+++ b/Asklepios/Asklepios.Application/Asklepios.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Convey.CQRS.Events" Version="1.1.448" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Scrutor" Version="4.2.2" />
