--- a/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
+++ b/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+      <PackageReference Include="Scrutor" Version="4.2.2" />
       <PackageReference Include="Serilog" Version="4.0.0-dev-02122" />
       <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
