Structure for the Integration tests

--- a/Asklepios/Asklepios.Api/Asklepios.Api.csproj
+++ b/Asklepios/Asklepios.Api/Asklepios.Api.csproj
@@ -24,4 +24,8 @@
       <Folder Include="logs\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="Asklepios.IntegrationTests" />
+    </ItemGroup>
+
 </Project>
