--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,19 @@ services:
       - 15672:15672
       - 15692:15692
 
+  seq:
+    image: datalust/seq
+    container_name: asklepios_seq
+    restart: unless-stopped
+    environment:
+      ACCEPT_EULA: "Y"
+    ports:
+      - 5341:80
+    volumes:
+      - seq-data:/data
+
 volumes:
   postgres:
+    driver: local
+  seq-data:
     driver: local
