--- a/Asklepios.Web/package.json
+++ b/Asklepios.Web/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@mdi/font": "6.2.95",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.2",
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
