--- a/Asklepios.Web/package.json
+++ b/Asklepios.Web/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@intlify/core": "^9.13.1",
     "@mdi/font": "6.2.95",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
@@ -16,7 +17,7 @@
     "roboto-fontface": "*",
     "vue": "^3.4.21",
     "vue-toastification": "^2.0.0-rc.5",
-    "vuetify": "^3.5.8"
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@babel/types": "^7.24.0",
