--- a/Asklepios.Web/package.json
+++ b/Asklepios.Web/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.7.2",
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.21",
     "vue-toastification": "^2.0.0-rc.5",
-    "vuetify": "^3.7.0-beta.1"
+    "vue3-odometer": "^0.1.3",
+    "vuetify": "^3.6.14"
   },
   "devDependencies": {
     "@babel/types": "^7.24.0",
@@ -40,7 +42,6 @@
     "unplugin-vue-router": "^0.8.4",
     "vite": "^5.1.5",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vite-plugin-vuetify": "^2.0.3",
     "vue-router": "^4.0.13",
     "vue-tsc": "^2.0.6"
   }
