--- a/Asklepios.Web/package.json
+++ b/Asklepios.Web/package.json
@@ -17,6 +17,7 @@
     "roboto-fontface": "*",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.21",
+    "vue-animate-number": "^0.4.2",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-odometer": "^0.1.3",
     "vuetify": "^3.6.14"
