--- a/Asklepios.Web/package.json
+++ b/Asklepios.Web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@intlify/core": "^9.13.1",
     "@mdi/font": "6.2.95",
+    "@microsoft/signalr": "^8.0.7",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.2",
