--- a/Asklepios.Tests/IntegrationTests/Asklepios.InfrastructureTests/Asklepios.InfrastructureTests.csproj
+++ b/Asklepios.Tests/IntegrationTests/Asklepios.InfrastructureTests/Asklepios.InfrastructureTests.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="Shouldly" Version="4.2.1" />
         <PackageReference Include="xunit" Version="2.4.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,6 +26,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Asklepios\Asklepios.Infrastructure\Asklepios.Infrastructure.csproj" />
+      <ProjectReference Include="..\Asklepios.IntegrationTests\Asklepios.IntegrationTests.csproj" />
     </ItemGroup>
 
 </Project>
