Update pdf generator

--- a/Asklepios.Web/package.json
+++ b/Asklepios.Web/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "core-js": "^3.34.0",
     "html2pdf.js": "^0.10.2",
+    "pdfmake": "^0.2.13",
     "roboto-fontface": "*",
     "vite-plugin-vuetify": "^2.0.4",
     "vue": "^3.4.21",
