--- a/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
+++ b/Asklepios/Asklepios.Infrastructure/Asklepios.Infrastructure.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
       <PackageReference Include="Convey.MessageBrokers.CQRS" Version="1.1.448" />
       <PackageReference Include="Convey.MessageBrokers.RabbitMQ" Version="1.1.448" />
+      <PackageReference Include="Hangfire" Version="1.8.14" />
+      <PackageReference Include="Hangfire.PostgreSql" Version="1.20.9" />
       <PackageReference Include="Humanizer" Version="2.14.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.18" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.20" />
