--- a/Asklepios.Tests/IntegrationTests/Asklepios.InfrastructureTests/Asklepios.InfrastructureTests.csproj
+++ b/Asklepios.Tests/IntegrationTests/Asklepios.InfrastructureTests/Asklepios.InfrastructureTests.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.1.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
         <PackageReference Include="Shouldly" Version="4.2.1" />
