Configure Hangfire on the test envinroment

--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -59,5 +59,8 @@
       "header": "message_context"
     },
     "spanContextHeader": "span_context"
+  },
+  "Hangfire": {
+    "Enable": false
   }
 }
