--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,13 @@ jobs:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
+      rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+          - 5672:5672
+          - 15672:15672
+        options: --health-cmd "rabbitmq-diagnostics ping" --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v3
 
@@ -40,14 +47,14 @@ jobs:
     - name: Build the project
       run: dotnet build Asklepios.sln
 
-    - name: Wait for PostgreSQL to be ready
+    - name: Wait for services to be ready
       run: |
         for i in {1..10}; do
-          if docker exec postgres pg_isready -U postgres -d mydatabase; then
-            echo "PostgreSQL is ready!"
+          if docker exec postgres pg_isready -U postgres -d mydatabase && docker exec rabbitmq rabbitmq-diagnostics ping; then
+            echo "Services are ready!"
             break
           fi
-          echo "Waiting for PostgreSQL..."
+          echo "Waiting for services..."
           sleep 5
         done
 
