--- a/Asklepios/Asklepios.Application/Asklepios.Application.csproj
+++ b/Asklepios/Asklepios.Application/Asklepios.Application.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Convey.CQRS.Events" Version="1.1.448" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+      <PackageReference Include="QuestPDF" Version="2024.10.3" />
       <PackageReference Include="Scrutor" Version="4.2.2" />
       <PackageReference Include="SendGrid" Version="9.29.3" />
     </ItemGroup>
