--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,24 @@ services:
     volumes:
       - seq-data:/data
 
+  asklepios-api:
+    build:
+      context: .
+      dockerfile: Asklepios/Asklepios.Api/Dockerfile
+    container_name: asklepios_api
+    restart: unless-stopped
+    ports:
+      - 8080:80
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__Default=Host=postgres;Port=5432;Database=postgres;Username=postgres;Password=postgres
+      - RabbitMQ__Host=rabbitmq
+      - Seq__ServerUrl=http://seq:80
+    depends_on:
+      - postgres
+      - rabbitmq
+      - seq
+
 volumes:
   postgres:
     driver: local
