Fix postgres communication on the docker container

--- a/Asklepios/Asklepios.Api/appsettings.Development.json
+++ b/Asklepios/Asklepios.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "postgres": {
+    "connectionString": "Host=postgres;Port=5432;Database=asklepios;Username=postgres;Password="
   }
 }
