--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,80 @@
-name: .NET CI
+name: CI Pipeline
 
 on:
   push:
     branches:
       - main
-      - develop
+      - '**'
   pull_request:
     branches:
       - main
-      - develop
-jobs:
-  build:
+      - '**'
 
+jobs:
+  backend-build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup .NET
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
-        
+
     - name: Restore dependencies
       run: dotnet restore Asklepios.sln
-      
+
     - name: Build the project
       run: dotnet build Asklepios.sln
+
+    - name: Run tests
+      run: dotnet test Asklepios.sln
+      continue-on-error: true
+
+    - name: Post-build steps
+      if: success() || failure()
+      run: echo "Backend build and test completed"
+
+  frontend-build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Use Node.js 18.x
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Cache Node.js modules
+      uses: actions/cache@v3
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/Asklepios.Web/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: ./Asklepios.Web
+
+    - name: Lint the code
+      run: npm run lint
+      working-directory: ./Asklepios.Web
+      continue-on-error: true
+
+    - name: Run tests
+      run: npm run test:unit
+      working-directory: ./Asklepios.Web
+      continue-on-error: true
+
+    - name: Build the project
+      run: npm run build
+      working-directory: ./Asklepios.Web
+
+    - name: Post-build steps
+      if: success() || failure()
+      run: echo "Frontend build and test completed"
