Add Redis configuration

--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -15,6 +15,10 @@
   "postgres": {
     "connectionString": "Host=localhost;Database=asklepios;Username=postgres;Password="
   },
+  "redis": {
+    "connectionString": "redis:6379",
+    "instanceName": "Asklepios_"
+  },
   "KeyVault": {
     "VaultUri": "https://asklepios.vault.azure.net/"
   },
