Add statistics cache

--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -16,7 +16,7 @@
     "connectionString": "Host=localhost;Database=asklepios;Username=postgres;Password="
   },
   "redis": {
-    "connectionString": "redis:6379",
+    "connectionString": "localhost:6379",
     "instanceName": "Asklepios_"
   },
   "KeyVault": {
