Fix problem with stats cache

--- a/Asklepios/Asklepios.Api/appsettings.Development.json
+++ b/Asklepios/Asklepios.Api/appsettings.Development.json
@@ -8,6 +8,10 @@
   "postgres": {
     "connectionString": "Host=postgres;Port=5432;Database=asklepios;Username=postgres;Password="
   },
+  "redis": {
+    "connectionString": "redis:6379",
+    "instanceName": "Asklepios_"
+  },
   "rabbitMq": {
     "connectionName": "Asklepios",
     "retries": 3,
