Add HealthCheck to the project

--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -69,5 +69,15 @@
   },
   "SeedData": {
     "Enable": true
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "API Health Check",
+        "Uri": "http://localhost:5000/health"
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
