--- a/Asklepios/Asklepios.Api/appsettings.Development.json
+++ b/Asklepios/Asklepios.Api/appsettings.Development.json
@@ -6,10 +6,10 @@
     }
   },
   "postgres": {
-    "connectionString": "Host=postgres;Port=5432;Database=asklepios;Username=postgres;Password="
+    "connectionString": "Host=localhost;Port=5432;Database=asklepios;Username=postgres;Password="
   },
   "redis": {
-    "connectionString": "redis:6379",
+    "connectionString": "localhost:6379",
     "instanceName": "Asklepios_"
   },
   "rabbitMq": {
@@ -25,7 +25,7 @@
     "virtualHost": "/",
     "port": 5672,
     "hostnames": [
-      "rabbitmq"
+      "localhost"
     ],
     "requestedConnectionTimeout": "00:00:30",
     "requestedHeartbeat": "00:01:00",
