--- a/Asklepios/Asklepios.Api/appsettings.Development.json
+++ b/Asklepios/Asklepios.Api/appsettings.Development.json
@@ -6,10 +6,10 @@
     }
   },
   "postgres": {
-    "connectionString": "Host=localhost;Port=5432;Database=asklepios;Username=postgres;Password="
+    "connectionString": "Host=postgres;Port=5432;Database=asklepios;Username=postgres;Password="
   },
   "redis": {
-    "connectionString": "localhost:6379",
+    "connectionString": "redis:6379",
     "instanceName": "Asklepios_"
   },
   "rabbitMq": {
@@ -25,7 +25,7 @@
     "virtualHost": "/",
     "port": 5672,
     "hostnames": [
-      "localhost"
+      "rabbitmq"
     ],
     "requestedConnectionTimeout": "00:00:30",
     "requestedHeartbeat": "00:01:00",
@@ -53,5 +53,15 @@
       "header": "message_context"
     },
     "spanContextHeader": "span_context"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "API Health Check",
+        "Uri": "http://localhost:5102/health"
+      }
+    ],
+    "EvaluationTimeOnSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
