--- a/Asklepios/Asklepios.Api/appsettings.json
+++ b/Asklepios/Asklepios.Api/appsettings.json
@@ -67,6 +67,9 @@
   "SeedData": {
     "Enable": true
   },
+  "sendgrid": {
+    "keySensGrid": ""
+  },
   "HealthChecksUI": {
     "HealthChecks": [
       {
